fix : 객체생성 수정